hphp/hack/test/typecheck/new_inference/typehole/lambda_constraint_bad.php.exp
File "lambda_constraint_bad.php", line 18, characters 15-21:
Invalid argument (Typing[4323])
File "lambda_constraint_bad.php", line 11, characters 17-17:
Some type constraint(s) are violated here
File "lambda_constraint_bad.php", line 11, characters 12-12:
T is a constrained type parameter
File "lambda_constraint_bad.php", line 11, characters 17-17:
Expected I
File "lambda_constraint_bad.php", line 18, characters 19-19:
But got C
